--- a/Inventario/nbproject/project.properties
+++ b/Inventario/nbproject/project.properties
@@ -35,7 +35,8 @@ file.reference.mysql-connector-java-8.0.29.jar=D:\\mysql-connector-java-8.0.29\\
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.29.jar}
+    ${file.reference.mysql-connector-java-8.0.29.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,7 +65,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=modelo.conexionBD
+main.class=vista.frmLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
